* Olympus M.Zuiko Digital ED 12-100mm f/4.0 IS Pro
* Panasonic Leica DG Vario-Elmarit 12-60mm f/2.8-4.0 Asph. Power OIS
* Panasonic Lumix G Vario 45-200 mm f/4.0-5.6 Mega OIS
* Sigma 17-50mm f/2.8 EX DC HSM
* smc Pentax-D FA Macro 100mm f/2.8 WR
* Tamron 14-150mm f/3.5-5.8 Di III Micro

New interchangable lens cameras:

* Canon EOS R
* Canon EOS RP
* Canon EOS R5
* Canon EOS R6
* Nikon D5600
* Nikon Z 5
* Olympus OM-D E-M1 Mark III
* Olympus OM-D E-M5 Mark III
* Olympus PEN E-PL9
* Panasonic DC-G9
* Panasonic DC-GX9
* Sony Alpha 7R III


=======================================
0.3.2 --> 0.3.95 (alpha preview of next release)
=======================================

__NOTE:__ This is an alpha release and snapshot of the current development.

Apart from the breaking changes listed at the end, all changes should be backwards compatible but many functions and variables have been marked as deprecated to encourage the use of the new improved API.

__General changes__

* Added support for the Adobe Camera Model (ACM) for distortion, TCA, and vignetting. It also covers fisheye models. Lensfun includes a script which can convert Adobe lens profiles into Lensfun.
* New perspective correction feature
* The `<distortion>` tag now may have a `real-focal` attribute with the actual focal length at this particular nominal focal length.  It replaces the `<real-focal-length>` tag.
* Due to the previous changes, the database format is now at version 2.
* Binary version number has been incremented to version 2.
* Torsten Bronger's calibration tutorial, his webserver code for receiving calibration images, and his calibration script are now part of Lensfun's source code.
* Lensfun is now internally prepared to support multiple calibrations per lens, e.g. for different crop factors.
* Internally make use of C++ STL containers instead of glib arrays or proprietary container formats.
* Use various C++11 features, hence compilation now requires a compiler supporting C++11.