@@ -524,6 +524,30 @@
 
     <camera>
         <maker>Canon</maker>
+        <model>Canon EOS 850D</model>
+        <model lang="en">EOS 850D</model>
+        <mount>Canon EF-S</mount>
+        <cropfactor>1.613</cropfactor>
+    </camera>
+
+    <camera>
+        <maker>Canon</maker>
+        <model>Canon EOS Rebel T8i</model>
+        <model lang="en">EOS Rebel T8i</model>
+        <mount>Canon EF-S</mount>
+        <cropfactor>1.613</cropfactor>
+    </camera>
+
+    <camera>
+        <maker>Canon</maker>
+        <model>Canon EOS Kiss X10i</model>
+        <model lang="en">EOS Kiss X10i</model>
+        <mount>Canon EF-S</mount>
+        <cropfactor>1.613</cropfactor>
+    </camera>
+
+    <camera>
+        <maker>Canon</maker>
         <model>Canon EOS 9000D</model>
         <model lang="en">EOS 9000D</model>
         <mount>Canon EF-S</mount>
