@@ -108,6 +108,7 @@ New interchangable lens cameras:
 * Canon EOS RP
 * Canon EOS R5
 * Canon EOS R6
+* Canon EOS Rebel T8i / EOS 850D / EOS Kiss X10i
 * Nikon D5600
 * Nikon Z 5
 * Olympus OM-D E-M1 Mark III
